--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>saucedemo-practice</name>
-  <url>http://maven.apache.org</url>
+  <url>https://www.saucedemo.com/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
